<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/scrollview"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="gtsarandum.syncc.CreateNewCalendarEventActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_title_edit_text"
        android:hint="@string/event_title"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_location_edit_text"
        android:hint="@string/event_location"
        android:layout_below="@id/event_title_edit_text"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_location_edit_text"
        android:paddingTop="2dp"
        android:text="@string/from"
        android:textIsSelectable="false"
        android:textColor="@android:color/secondary_text_dark"
        android:id="@+id/from"
        />

    <LinearLayout
        android:id="@+id/from_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/from"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/from_date_picker"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/from_time_picker"
            />

        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/to"
        android:layout_below="@id/from_time"
        android:text="@string/to"
        android:paddingTop="2dp"
        android:textIsSelectable="false"
        android:textColor="@android:color/secondary_text_dark"
        />


    <LinearLayout
        android:id="@+id/to_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/to"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/to_date_picker"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/to_time_picker"
            />

    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/all_day_check"
        android:text="@string/event_all_day"
        android:layout_below="@id/to_time"
        android:textColor="@android:color/secondary_text_dark_nodisable"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/all_day_check"
        android:text="@string/repetition"
        android:textColor="@android:color/secondary_text_dark_nodisable"
        android:paddingTop="2dp"
        android:id="@+id/repetition"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/repetition_spinner"
        android:layout_below="@id/repetition"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reminder"
        android:layout_below="@id/repetition_spinner"
        android:textColor="@android:color/secondary_text_dark_nodisable"
        android:text="@string/reminders"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reminder_spinner_layout"
        android:layout_below="@id/reminder"
        android:orientation="horizontal"
        >

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />



        </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reminder_spinner_layout"
        android:id="@+id/description_edit_text"
        android:hint="@string/event_description"
        />

</RelativeLayout>
</ScrollView>