<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="gtsarandum.syncc.CreateContactActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_name"
        android:id="@+id/contact_name_label"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_name"
        android:id="@+id/contact_name"
        android:layout_below="@id/contact_name_label"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_phonetic_name"
        android:layout_below="@id/contact_name"
        android:id="@+id/contact_phonetic_name_label"
        android:textColor="@color/primary_text"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_phonetic_name"
        android:id="@+id/contact_phonetic_name"
        android:layout_below="@id/contact_phonetic_name_label"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_organization_button"
        android:text="@string/contact_add_organization"
        android:layout_below="@id/contact_phonetic_name"
        android:textColor="@color/hint_text"
        android:background="@android:color/transparent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_phone"
        android:layout_below="@id/add_organization_button"
        android:id="@+id/contact_phone_label"
        android:textColor="@color/primary_text"
        />

    <!-- replace with linearlayout with edittext and spinner? -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_phone"
        android:layout_below="@id/contact_phone_label"
        android:inputType="phone"
        android:id="@+id/contact_phone"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_email"
        android:layout_below="@id/contact_phone"
        android:id="@+id/contact_email_label"
        android:textColor="@color/primary_text"
        />

    <!-- replcae with linearlayout with edittext and spinner? -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_email"
        android:layout_below="@id/contact_email_label"
        android:inputType="textEmailAddress"
        android:id="@+id/contact_email"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_address"
        android:layout_below="@id/contact_email"
        android:textColor="@color/primary_text"
        android:id="@+id/contact_address_label"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_address"
        android:layout_below="@id/contact_address_label"
        android:id="@+id/contact_address"
        />

</RelativeLayout>
</ScrollView>

